# interview_problem

./: README.md  run_tests.sh
solution/: .gitignore  Cargo.toml  pub_key
solution/src/: crypto.rs  main.rs  routes.rs
src/: crypto.rs  main.rs  routes.rs
testing/: Cargo.toml
testing/src/: checks.rs  main.rs  negative_checks.rs
